<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_page_title1"
        style="@style/TitreStyle"
        android:layout_marginTop="70dp"
        android:textStyle="italic"
        android:textColor="@color/darkGray"
        app:layout_constraintTop_toBottomOf="@id/img_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/Title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_page_title2"
        style="@style/TitreStyle"
        android:textStyle="italic"
        android:layout_marginTop="110dp"
        app:layout_constraintTop_toBottomOf="@id/img_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/Title"
        android:background="@drawable/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/home_page_button"
        />

    <ImageView
        android:alpha="0.3"
        android:id="@+id/img_background"
        android:scaleType="centerCrop"
        android:background="@drawable/splash"
        tools:src="@drawable/splash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>